# vetka-mcp-full

./: .agent_lock  .claude-mcp-config.md  .coverage  .env.example  .gitattributes  .gitignore  .mcp.json  ACTIVITY_FEED_REGISTRATION.md  AGENTS.md  BRIDGE_COMMANDS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DETECTION_DIRECT_API_TEST.py  README.md  SCROLL_BTN_MARKERS_SUMMARY.txt  THIRD_PARTY_NOTICES.md  VETKA_AGENT_GUIDE.md  analyze_unused_imports_v2.py  cleanup_unused_imports.sh  docker-compose.yml  fix_hiddify_proxy.command  github-recovery-codes.txt  install_clashverge_bigsur_intel.command  install_hiddify_oneclick.command  launch_vetka.py  main.py  opencode.json  package-lock.json  pre_launch_check.sh  push_to_github.sh  pytest.ini  quick_fix.sh  quick_start.sh  requirements-dev.txt  requirements.txt  run.sh  run_mcp.py  run_mycelium.py  run_vetka.bat  (+16 more)
.claude/: launch.json  settings.json
.github/: COMMIT_CHECKLIST.md  pull_request_template.md
.vibe/: last_session.json
app/: README.md  constitution.md  eval_routes.py  requirements.txt  start_vetka.sh  test_weaviate.py
client/: .env.example  .gitignore  AUDIT_EXISTING_UI.md  index.html  mycelium.html  node_modules  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
client/src-tauri/: Cargo.toml  cut.human.entry.tsx  cut.human.html  tauri.conf.json  tauri.cut.conf.json  tauri.human.conf.json  tauri.opus.conf.json  vite.cut.human.config.mjs
client/src-tauri-mcc/: Cargo.toml  tauri.conf.json
client/src-tauri-mcc/capabilities/: default.json
client/src-tauri-mcc/src/: main.rs
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: commands.rs  file_system.rs  heartbeat.rs  main.rs
config/: __init__.py  browser_agents.yaml  config.py  design_system.py  litellm_config.yaml  mapping_v1.3.yaml  sherpa.yaml  vetka_schema_v1.3.json
data/: artifact_sample_node.json  changelog.jsonl  chat_history.json  chat_pins_log.json  config.example.json  config.json  connectors_ingestion_queue.json  connectors_registry.json  connectors_state.json  connectors_tokens.example.json  connectors_tokens.json  favorites.json  groups.json  heartbeat_config.json  heartbeat_cursors.json  heartbeat_state.json  learned_key_patterns.json  model_status_cache.json  models_cache.json  mycelium_state.json  node_favorites.json  pinned_files.json  pipeline_history.json  pipeline_tasks.json  project_config.json  project_digest.json  reactions.json  roadmap_dag.json  session_state.json  staging.json  task_board.json  task_tracker.json  tool_audit_log.jsonl  tree_layout.json  trufflehog_patterns.json  usage_tracking.json  watcher_state.json
datasets/: classification_dataset.py  training_examples_extended.json  training_examples_phase54.json
dist-mcc/: mycelium.html
docs/: ACTIVITY_FEED_API.md  ACTIVITY_FEED_INDEX.md  ACTIVITY_FEED_QUICK_REF.md  AGENT_INFRASTRUCTURE_STATUS.md  ANALYSIS_COMPLETE.md  ARTIFACT_FLOW_ANALYSIS.md  ARTIFACT_FLOW_DIAGRAM.md  ARTIFACT_PANEL_UPGRADE_REPORT.md  ARTIFACT_SCANNER_QUICK_REF.md  AUDIT_README_HAIKU2.md  AUDIT_REPORT_PHASE_80_6.md  BATTLEFIELD_REPORT_2026_02_14.md  BUG_TRIAGE_REPORT.md  Building Knowledge Graphs from EmbeddingsVETKA Technical Specificatio.md  CHAT_AUTOLOAD_FIX.md  CHAT_DIAGNOSIS.md  CHAT_FIXES_CHECKLIST.md  CHAT_FIXES_SUMMARY.md  CHAT_HISTORY_DEBUG_REPORT.md  CHAT_UI_IMPROVEMENTS.md  CHECKLIST_STEP3.txt  CLEANUP_LIST_MCP_CONSOLE_5002.md  COMPLETE_FIX_REPORT.md  COMPLETION_CHECKLIST.md  COORDINATE_SYSTEM_CLARIFICATION.md  CORRECTED_DIAGNOSIS.md  CRITICAL_FINDINGS_ARCHITECTURE_ISSUE.md  CRITICAL_FIX_NODE_PATH_RESOLUTION.md  CRITICAL_FIX_PORT_MISMATCH.md  CROSS_TASK_REGRESSION_AUDIT_204.md  DEBUG_BACKEND_CONNECTION.md  DeepSeek-OCR.txt  EDIT_NAME_AUDIT_REPORT.md  ENGRAM_QDRANT_FIX_104.7.md  FIX_FILES_REFERENCE.md  FIX_MODEL_NAMES_AND_ROUTING.md  GIT_AUTO_PUSH_CODE_MAP.md  GIT_CLEANLINESS_GUIDE.md  GROUP_CHAT_AUDIT_57_6.md  GROUP_CHAT_FIXES_QUICK_START.md  (+182 more)
examples/: activity_feed_integration.py  cam_integration_example.py
frontend/: metrics_dashboard.html  package.json
hooks/: post-merge
photo_parallax_playground/: CONTRACTS_V1.md  HANDOFF_TO_FRESH_CHAT_UI_2026-03-29.md  (+7 more)
player_playground/src-tauri/: Cargo.toml  tauri.conf.json
player_playground/src-tauri/capabilities/: default.json
player_playground/src-tauri/icons/: icon.icns
player_playground/src-tauri/src/: main.rs
src/reflex/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  experiment.py  filter.py  preferences.py  pyproject.toml  registry.py  scorer.py
src/reflex/data/: tool_catalog.json
(+6140 files in other folders)
