[package]
name = "mycelium"
version = "0.1.0"
description = "MYCELIUM - Standalone Command Center for AI Pipeline Management"
authors = ["Danila Gulin"]
edition = "2021"

# MARKER_175.4: Minimal Tauri app — no 3D, no file watcher, no deep-link

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
