[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-tool-engine"
version = "0.1.0"
description = "Reactive Tool Recommendation Engine for LLM agent pipelines"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Danila Gulin", email = "danila@vetka.ai"}
]
requires-python = ">=3.10"
keywords = ["llm", "tools", "recommendation", "agents", "pipeline", "function-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero external dependencies for core — works with stdlib only
dependencies = []

[project.optional-dependencies]
# Optional: vector search for semantic matching
qdrant = ["qdrant-client>=1.7.0"]
# Optional: WebSocket streaming
streaming = ["websockets>=12.0"]
# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/danilagoleen/reflex-tool-engine"
Repository = "https://github.com/danilagoleen/reflex-tool-engine"
Documentation = "https://github.com/danilagoleen/reflex-tool-engine#readme"
Issues = "https://github.com/danilagoleen/reflex-tool-engine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["reflex*"]

[tool.setuptools.package-data]
reflex = ["data/*.json"]
